Navbar gap fix

--- a/client/src/styles/_mainNav.scss
+++ b/client/src/styles/_mainNav.scss
@@ -1,6 +1,6 @@
 .main-menu.navbar-container
 {
-    height: 100vh;
+    min-height: 100vh;
     background-color: $light;
 }
 
